WIP: dockerizing